--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   prometheus:
     container_name: prometheus
-    image: prom/prometheus:v2.37.9
+    image: prom/prometheus
     volumes:
       - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./rules:/etc/prometheus/rules
@@ -30,7 +30,7 @@ services:
   
   node-exporter:
     privileged: true
-    image: prom/node-exporter:v1.3.1
+    image: prom/node-exporter
     container_name: synology
     restart: unless-stopped
     ports:
