--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   grafana:
     container_name: grafana
-    image: grafana/grafana:9.1.1
+    image: grafana/grafana-enterprise
     ports:
       - "3000:3000"
     depends_on:
