--- a/config/alertmanager.yml
+++ b/config/alertmanager.yml
@@ -18,8 +18,8 @@ receivers:
 - name: default-telegram
   telegram_configs:
   - api_url: https://api.telegram.org
-    bot_token: 5300061572:AAGOTVIoEkeNVOsA_FGrxmW9coNYc26SqHs
-    chat_id: -4024302682
+    bot_token: #
+    chat_id: #
     disable_notifications: false
     http_config:
       follow_redirects: true
